--- a/environment.yml
+++ b/environment.yml
@@ -1,259 +1,20 @@
-name: dusted
+name: spider
 channels:
   - conda-forge
   - defaults
+
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - bzip2=1.0.8=h4bc722e_7
-  - ca-certificates=2025.8.3=hbd8a1cb_0
-  - ld_impl_linux-64=2.44=h1423503_1
-  - libffi=3.4.6=h2dba641_1
-  - libgcc=15.1.0=h767d61c_4
-  - libgcc-ng=15.1.0=h69a702a_4
-  - libgomp=15.1.0=h767d61c_4
-  - liblzma=5.8.1=hb9d3cd8_2
-  - liblzma-devel=5.8.1=hb9d3cd8_2
-  - libnsl=2.0.1=hb9d3cd8_1
-  - libsqlite=3.50.4=h0c1763c_0
-  - libuuid=2.38.1=h0b41bf4_0
-  - libxcrypt=4.4.36=hd590300_1
-  - libzlib=1.3.1=hb9d3cd8_2
-  - ncurses=6.5=h2d0b736_3
-  - openssl=3.5.2=h26f9b46_0
-  - python=3.8.20=h4a871b0_2_cpython
-  - readline=8.2=h8c095d6_2
-  - tk=8.6.13=noxft_hd72426e_102
+  - python=3.8.20
   - wheel=0.45.1=pyhd8ed1ab_0
-  - xz=5.8.1=hbcc6ac9_2
-  - xz-gpl-tools=5.8.1=hbcc6ac9_2
-  - xz-tools=5.8.1=hb9d3cd8_2
+  - pip
   - pip:
-      - aiohappyeyeballs==2.4.4
-      - aiohttp==3.10.11
-      - aiosignal==1.3.1
-      - alembic==1.14.1
-      - anndata==0.9.2
-      - anyio==4.5.2
-      - argon2-cffi==25.1.0
-      - argon2-cffi-bindings==21.2.0
-      - arrow==1.3.0
-      - asciitree==0.3.3
-      - asttokens==3.0.0
-      - async-lru==2.0.4
-      - async-timeout==5.0.1
-      - asyncio-atexit==1.0.1
-      - attrs==25.3.0
-      - babel==2.17.0
-      - backcall==0.2.0
-      - backports-zoneinfo==0.2.1
-      - beautifulsoup4==4.13.5
-      - bleach==6.1.0
-      - certifi==2022.12.7
-      - cffi==1.17.1
-      - charset-normalizer==2.1.1
-      - click==8.1.8
-      - cloudpickle==3.1.1
-      - colorlog==6.10.1
-      - comm==0.2.3
-      - contourpy==1.1.1
-      - cycler==0.12.1
-      - dask==2023.5.0
-      - dask-image==2023.3.0
-      - debugpy==1.8.16
-      - decorator==5.2.1
-      - defusedxml==0.7.1
-      - deprecated==1.2.18
-      - docrep==0.3.2
-      - et-xmlfile==2.0.0
-      - exceptiongroup==1.3.0
-      - executing==2.2.0
-      - fasteners==0.20
-      - fastjsonschema==2.21.2
-      - filelock==3.13.1
-      - fonttools==4.57.0
-      - fqdn==1.5.1
-      - frozenlist==1.5.0
-      - fsspec==2024.6.1
-      - get-annotations==0.1.2
-      - googleapis-common-protos==1.70.0
-      - greenlet==3.1.1
-      - h11==0.16.0
-      - h5py==3.11.0
-      - httpcore==1.0.9
-      - httpx==0.27.2
-      - idna==3.4
-      - igraph==0.11.8
-      - imageio==2.35.1
-      - importlib-metadata==8.5.0
-      - importlib-resources==6.4.5
-      - inflect==7.4.0
-      - iniconfig==2.1.0
-      - ipykernel==6.29.5
-      - ipython==8.12.3
-      - ipywidgets==8.1.7
-      - isoduration==20.11.0
-      - jedi==0.19.2
-      - jinja2==3.1.4
-      - joblib==1.4.2
-      - json5==0.12.1
-      - jsonpointer==3.0.0
-      - jsonschema==4.23.0
-      - jsonschema-specifications==2023.12.1
-      - jupyter==1.1.1
-      - jupyter-client==8.6.3
-      - jupyter-console==6.6.3
-      - jupyter-core==5.8.1
-      - jupyter-events==0.10.0
-      - jupyter-lsp==2.3.0
-      - jupyter-server==2.14.2
-      - jupyter-server-terminals==0.5.3
-      - jupyterlab==4.3.8
-      - jupyterlab-pygments==0.3.0
-      - jupyterlab-server==2.27.3
-      - jupyterlab-widgets==3.0.15
-      - kiwisolver==1.4.7
-      - lazy-loader==0.4
-      - leidenalg==0.10.2
-      - llvmlite==0.39.1
-      - locket==1.0.0
-      - louvain==0.8.2
-      - mako==1.3.10
-      - markupsafe==2.1.5
-      - matplotlib==3.7.5
-      - matplotlib-inline==0.1.7
-      - matplotlib-scalebar==0.8.1
-      - mistune==3.1.4
-      - more-itertools==10.5.0
-      - mpmath==1.3.0
-      - msgpack==1.1.1
-      - multidict==6.1.0
-      - natsort==8.4.0
-      - nbclient==0.10.1
-      - nbconvert==7.16.6
-      - nbformat==5.10.4
-      - nest-asyncio==1.6.0
-      - networkx==3.0
-      - notebook==7.3.3
-      - notebook-shim==0.2.4
-      - numba==0.56.4
-      - numcodecs==0.12.1
       - numpy==1.22.4
-      - omnipath==1.0.8
-      - openpyxl==3.1.5
-      - opentelemetry-api==1.33.1
-      - opentelemetry-exporter-otlp-proto-common==1.33.1
-      - opentelemetry-exporter-otlp-proto-http==1.33.1
-      - opentelemetry-instrumentation==0.54b1
-      - opentelemetry-instrumentation-httpx==0.54b1
-      - opentelemetry-instrumentation-requests==0.54b1
-      - opentelemetry-instrumentation-threading==0.54b1
-      - opentelemetry-instrumentation-urllib==0.54b1
-      - opentelemetry-proto==1.33.1
-      - opentelemetry-sdk==1.33.1
-      - opentelemetry-semantic-conventions==0.54b1
-      - opentelemetry-util-http==0.54b1
-      - optuna==4.5.0
-      - overrides==7.7.0
-      - packaging==25.0
       - pandas==2.0.3
-      - pandocfilters==1.5.1
-      - parso==0.8.4
-      - partd==1.4.1
-      - patsy==1.0.1
-      - pexpect==4.9.0
-      - pickleshare==0.7.5
-      - pillow==10.2.0
-      - pims==0.7
-      - pip==25.0.1
-      - pkgutil-resolve-name==1.3.10
-      - platformdirs==4.3.6
-      - pluggy==1.5.0
-      - prometheus-client==0.21.1
-      - prompt-toolkit==3.0.51
-      - propcache==0.2.0
-      - protobuf==5.29.5
-      - psutil==5.9.8
-      - ptyprocess==0.7.0
-      - pure-eval==0.2.3
-      - pyarrow==17.0.0
-      - pycparser==2.22
-      - pygments==2.19.2
-      - pynndescent==0.5.13
-      - pyparsing==3.1.4
-      - pytest==8.3.5
-      - python-dateutil==2.9.0.post0
-      - python-json-logger==3.3.0
-      - pytz==2025.2
-      - pywavelets==1.4.1
-      - pyyaml==6.0.2
-      - pyzmq==27.0.1
-      - ray==2.10.0
-      - referencing==0.35.1
-      - requests==2.32.4
-      - rfc3339-validator==0.1.4
-      - rfc3986-validator==0.1.1
-      - rpds-py==0.20.1
-      - rpy2==3.4.1
-      - rpy2-rinterface==3.6.2
-      - scanpy==1.9.8
-      - scikit-image==0.21.0
-      - scikit-learn==1.3.2
       - scipy==1.10.1
-      - seaborn==0.13.2
-      - sedr==1.0.0
-      - send2trash==1.8.3
-      - session-info==1.0.1
-      - setuptools==75.3.2
-      - six==1.17.0
-      - slicerator==1.1.0
-      - smoother==0.0.1
-      - sniffio==1.3.1
-      - soupsieve==2.7
-      - sqlalchemy==2.0.44
-      - squidpy==1.2.3
-      - stack-data==0.6.3
-      - stagate-pyg==1.0.0
-      - statsmodels==0.14.1
-      - stdlib-list==0.10.0
-      - sympy==1.13.3
-      - synapseclient==4.5.1
-      - tensorboardx==2.6.2.2
-      - terminado==0.18.1
-      - texttable==1.7.0
-      - threadpoolctl==3.5.0
-      - tifffile==2023.7.10
-      - tinycss2==1.2.1
-      - tomli==2.2.1
-      - toolz==1.0.0
-      - torch==2.1.0+cu118
-      - torch-cluster==1.6.3+pt21cu118
-      - torch-geometric==2.4.0
-      - torch-scatter==2.1.2
-      - torch-sparse==0.6.18
-      - torchaudio==2.1.0+cu118
-      - torchvision==0.16.0+cu118
-      - tornado==6.4.2
+      - scikit-learn==1.3.2
+      - matplotlib==3.7.5
+      - scanpy==1.9.8
+      - anndata==0.9.2
       - tqdm==4.67.1
-      - traitlets==5.14.3
-      - triton==2.1.0
-      - typeguard==4.4.0
-      - types-python-dateutil==2.9.0.20241206
-      - typing-extensions==4.12.2
-      - tzdata==2025.2
-      - tzlocal==5.2
-      - umap-learn==0.5.7
-      - uri-template==1.3.0
-      - urllib3==1.26.20
-      - validators==0.34.0
-      - wcwidth==0.2.13
-      - webcolors==24.8.0
-      - webencodings==0.5.1
-      - websocket-client==1.8.0
-      - widgetsnbextension==4.0.14
-      - wrapt==1.17.3
-      - xarray==2023.1.0
-      - yarl==1.15.2
-      - zarr==2.16.1
-      - zipp==3.20.2
-prefix: /home/istiaq/anaconda3/envs/dusted
+      - ipykernel
+prefix: /home/istiaq/anaconda3/envs/spider
